# lore

./: .gitignore  CODEOWNERS  Dockerfile.server  LICENSE  README.md  architecture.md  docker-compose.yml  phase2-architecture.md  phase2-brief.md  phase2-prd.md  phase2-sprint.md  prd.md  product-brief.md  pyproject.toml  sprint-plan.md
.github/workflows/: ci.yml  docker.yml
infra/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: lore-stack.ts
migrations/: 001_initial.sql  004_sharing.sql  005_oidc_and_rbac.sql
src/lore/: __init__.py  __main__.py  cli.py  client.py  exceptions.py  lore.py  types.py
src/lore/embed/: __init__.py  base.py  local.py
src/lore/mcp/: __init__.py  server.py
src/lore/server/: __init__.py  app.py  auth.py  config.py  db.py  logging_config.py  metrics.py  middleware.py  models.py  oidc.py
src/lore/server/routes/: keys.py  lessons.py  sharing.py
src/lore/store/: __init__.py  base.py  memory.py  remote.py  sqlite.py
stories/: story-1.md  story-10.md  story-11.md  story-12.md  story-13.md  story-14.md  story-15.md  story-2.md  story-3.md  story-4.md  story-5.md  story-6.md  story-7.md  story-8.md  story-9.md
stories/phase2/: story-1.md  story-10.md  story-11.md  story-2.md  story-3.md  story-4.md  story-5.md  story-6.md  story-7.md  story-8.md  story-9.md
tests/: test_cli.py  test_client.py  test_decay_voting.py  test_embedder.py  test_export_import.py  test_lesson.py  test_prompt.py  test_query.py  test_redact.py  test_remote_store.py  test_stores.py
tests/integration/: test_remote.py
tests/server/: test_auth.py  test_db.py  test_health.py  test_jwt_auth.py  test_keys.py  test_lessons.py  test_logging.py  test_metrics.py  test_migration_005.py  test_migration_sql.py  test_oidc.py  test_org_init.py  test_rate_limit.py  test_rbac.py  test_readiness.py
ts/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
ts/src/: embed.ts  errors.ts  index.ts  lore.ts  prompt.ts  redact.ts  types.ts
ts/src/store/: base.ts  index.ts  memory.ts  remote.ts  sqlite.ts
ts/tests/: embed.test.ts  lore.test.ts  memory-store.test.ts  prompt.test.ts  query.test.ts  redact.test.ts  remote-store.test.ts  sqlite-store.test.ts
